<resources>
    <string name="app_name">Campus Ways</string>

    //Menu Items
    <string name="title_activity_maps">Campus Ways</string>
    <string name="title_activity_main">Campus Ways</string>

    <string name="normal_map"> Normal Map</string>
    <string name="hybrid_map"> Hybrid Map</string>
    <string name="satellite_map"> Satellite Map</string>
    <string name="terrain_map"> Terrain Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="map_types">Map Types</string>
    <string name="destination">Destination</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="donate">Donate</string>
    <string name="about_us">About Us</string>

    // For Login page
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="beaumont" />
    <string name="confirm">Confirm</string>
    <string name="b301">301</string>
    <string name="b302">302</string>
    <string name="b301f">301F</string>
    <string name="b301g">301G</string>
    <string name="b304">304</string>
    <string name="b305">305</string>
    <string name="b312">312</string>
    <string name="b314">314</string>
    <string name="bmont">Beaumont</string>

    // For Building Selection
    <string-array name="names">
        <item name="ausable">Ausable</item>
        <item name="beaumont">Beaumont</item>
        <item name="hawkins">Hawkins</item>
        <item name="yokum">Yokum</item>

    </string-array>

    <string-array name="startRoom">
        <item>301</item>
        <item>301F</item>
        <item>301G</item>
        <item>302</item>
        <item>304</item>
        <item>305</item>
        <item>312</item>
        <item>314</item>
    </string-array>

    <string-array name="endRoom">
        <item>301</item>
        <item>301F</item>
        <item>301G</item>
        <item>302</item>
        <item>304</item>
        <item>305</item>
        <item>312</item>
        <item>314</item>
    </string-array>


</resources>
